feat: add investment performance caching with intelligent hybrid cache loading and UI recalculation button